# algoritmo-evolucionario-py

./: .gitignore  CLAUDE.md  README.md  automato.py  gauss.py  individuo.py  main.py  malha.py  matriz.py  populacao.py  pyproject.toml  quadrilatero.py  requirements-dev.txt  sonda.py  tdma.py  util.py  visualizar.sh
src/algoritmo_evolucionario/: app.py  automato.py  config.py  cromossoma.py  hilbert.py  individuo.py  malha.py  ponto.py  populacao.py  quadrilatero.py  sonda.py  tdma.py
src/algoritmo_evolucionario/configs/: default.py  large.py  single_point.py  small.py
src/mesh_evolution/: __init__.py
src/mesh_evolution/algorithms/: __init__.py  matrix.py  solvers.py  tdma.py
src/mesh_evolution/core/: __init__.py  automato.py  geometry.py  mesh.py  util.py
