[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh-evolution-algorithm"
version = "2.0.0"
description = "Evolutionary algorithm for mesh deformation optimization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Rui Barata", email = "rbarata@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "isort>=5.10",
]

docs = [
    "sphinx>=4.5",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/rbarata/algoritmo-evolucionario-py"
Documentation = "https://github.com/rbarata/algoritmo-evolucionario-py/wiki"
Repository = "https://github.com/rbarata/algoritmo-evolucionario-py.git"
Issues = "https://github.com/rbarata/algoritmo-evolucionario-py/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/mesh_evolution --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["mesh_evolution"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
